# gpgpu

./: .gitignore  CMakeLists.txt  Dockerfile  FindFreeImagePlus.cmake  README.md  freeimagetest  test.cpp
collective_database/: PXL_20211101_175643604.jpg:Zone.Identifier
output/: README.md
src/: cpu.cpp  cpu.hpp  image.cpp  image.hpp  main.cpp  process.cu  process.hpp  utils.cpp  utils.hpp
